Update footer with disclaimer and organization status

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                 </div>
                 <div class="footer-about">
                     <h3>About Us</h3>
-                    <p>WhyDRS is a volunteer-driven initiative to help investors understand and access Direct Registration Systems for their stock investments.</p>
+                    <p>WhyDRS does not give financial advice. Each investor is responsible for their own decisions.</p>
+                    <p>WhyDRS provides educational and reference information about the U.S. financial markets, publicly traded companies, and the Direct Registration System.</p>
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
@@ -252,7 +253,7 @@
             <div class="footer-divider"></div>
             <div class="footer-bottom">
                 <div class="footer-copyright">
-                    <p>&copy; <span id="current-year"></span> WhyDRS Database. All rights reserved.</p>
+                    <p>&copy; <span id="current-year"></span> WhyDRS. WhyDRS is a 501(c)(3) Charitable Organization and DUNA.</p>
                 </div>
                 <div class="footer-legal">
                     <p>
