Fix logo link to point to root URL instead of hash

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header role="banner">
         <div class="container">
             <div class="logo">
-                <a href="#" aria-label="WhyDRS Home">
+                <a href="/" aria-label="WhyDRS Home">
                     <img src="assets/images/WhyDRS_Logo_transparent_background.png" alt="WhyDRS Logo" width="150" height="50">
                 </a>
             </div>
