Update full database URL to use clean URL format without .html extension

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="database-access">
-                    <a href="full-database.html" class="button primary" aria-label="Access the full database">Access Full Database</a>
+                    <a href="full-database" class="button primary" aria-label="Access the full database">Access Full Database</a>
                 </div>
             </div>
         </section>
