Update About section content and center logo

--- a/index.html
+++ b/index.html
@@ -146,12 +146,13 @@
                 <h2 id="about-heading">About WhyDRS</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>WhyDRS Database is a comprehensive, community-driven resource providing essential information about publicly traded companies and share registration systems.</p>
-                        <p>Our mission is to centralize scattered information about Direct Registration Systems (DRS), making it accessible to any investor who wants to understand their investments better and take control of their share ownership.</p>
-                        <p>This 100% volunteer-driven project updates daily with the latest data from official sources including the SEC.</p>
+                        <p>The WhyDRS Database is a comprehensive, community-driven resource providing essential information about publicly traded companies and share registration systems.</p>
+                        <p>This Database is maintained by WhyDRS, which is a 501(c)(3) charitable organization and a DUNA.</p>
+                        <p>Our mission is to collect and source the scattered information about the Direct Registration System (DRS), making ownership accessible to any investor who wants to understand their investments better and take control of their share ownership. We believe that all investors deserve access to this information.</p>
+                        <p>This 100% volunteer-driven project updates daily with the latest data from official sources including the SEC, and can be updated manually by individual contributors. If you want to learn more or if you want to help verify contributions, check out our GitHub.</p>
                         <a href="https://whydrs.org" class="button primary" target="_blank" rel="noopener noreferrer">Visit Main Site</a>
                     </div>
-                    <div class="about-image">
+                    <div class="about-image" style="display: flex; justify-content: center; align-items: center;">
                         <img src="assets/images/WhyDRS_Logo_transparent_background.png" alt="WhyDRS Database Logo" width="280" height="140" loading="lazy">
                     </div>
                 </div>
