Enhance mobile responsiveness across the entire website

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="WhyDRS: The comprehensive public database for information about publicly traded companies and the Direct Registration System (DRS) for shares.">
     <meta name="keywords" content="DRS, Direct Registration System, stocks, shares, publicly traded companies, share ownership">
     <meta name="author" content="WhyDRS.org">
-    <meta name="theme-color" content="#1565C0">
+    <meta name="theme-color" content="#0d47a1">
     <meta property="og:title" content="WhyDRS - Not your name, not your shares!">
     <meta property="og:description" content="The comprehensive public database on Direct Registration Systems for publicly traded companies.">
     <meta property="og:type" content="website">
