Restore to commit 67c4b5957dc1a04c5f5284504f5d6abd7f806c53

--- a/full-database.html
+++ b/full-database.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WhyDRS Full Database: Complete tabular view of all companies and their Direct Registration System (DRS) information.">
     <meta name="keywords" content="DRS, Direct Registration System, stocks, shares, publicly traded companies, database, table">
     <meta name="author" content="WhyDRS.org">
-    <meta name="theme-color" content="#0d47a1">
+    <meta name="theme-color" content="#1565C0">
     <meta property="og:title" content="WhyDRS Full Database">
     <meta property="og:description" content="Complete tabular view of all companies in the WhyDRS database.">
     <meta property="og:type" content="website">
