--- a/full-database.html
+++ b/full-database.html
@@ -50,6 +50,7 @@
             <div class="container">
                 <h1 id="database-title">WhyDRS Database</h1>
                 <p class="database-subtitle">* Empty cells indicate missing data. You can help us improve by <a href="index.html#contribute">contributing missing information</a> or emailing us at <a href="mailto:hi@whydrs.org">hi@whydrs.org</a>.</p>
+                <p class="database-subtitle">Click email and phone number cells to copy information to your clipboard.</p>
             </div>
         </section>
 
